gateway-api-stuff/cluster-operator-hat/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: shared-public-gateway-my-dummy-colored-app
  namespace: infrastructure
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    hostname: my-dummy-colored-app-exposed-by-gateway-api.net
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
    # allowedRoutes:
    #   kinds:
    #   - kind: HTTPRoute
      # namespaces:
      #   from: Selector
      #   selector:
      #     matchLabels:
      #       shared-gateway-access: "true"
    # tls:
      # certificateRefs:
      # - kind: Secret
      #   group: ""
      #   name: wildcard-domain-net-cert
      #   namespace: infrastructure-certs # <-- potential different ns
